# destination

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  justfile
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
benches/: compare_records.rs
data/: address_sample.csv  addresses.data  business_licenses_20250317.csv  county_addresses.data  grants_pass_addresses_20250731.csv  schema.ini
src/: address.rs  business.rs  cli.rs  compare.rs  data.rs  error.rs  geo.rs  lexisnexis.rs  lib.rs  main.rs  parser.rs  utils.rs
src/address_components/: address_status.rs  floor.rs  mod.rs  postal_community.rs  state.rs  street_name_post_type.rs  street_name_pre_directional.rs  street_name_pre_modifier.rs  street_name_pre_type.rs  street_separator.rs  subaddress_type.rs
src/compare/: compare.rs  compare_fire.rs  eponym.rs  mod.rs
src/import/: common.rs  fire_inspection.rs  grants_pass.rs  grants_pass_business.rs  josephine_county.rs  mod.rs
tests/: test_address.rs  unit.rs
tests/test_data/: addresses.data  business_licenses_20240520.csv  business_points.csv  city_addresses_20240513.csv.xml  schema.ini
