[package]
name = "destination"
version = "0.1.1"
edition = "2024"
authors = ["Erik Rose <erose@grantspassoregon.gov>"]
description = "A library providing types and method for managing physical addresses in a municipality."
repository = "https://github.com/grantspassoregon/destination"
license = "Apache-2.0"
keywords = ["address", "government", "parser"]
categories = [
  "command-line-utilities",
  "parser-implementations",
  "science::geo",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "destination"

[features]
ci = []

[dependencies]
anyhow = "1.0.97"
bincode = "1.3.3"
clap = { version = "4.5.31", features = ["derive"] }
convert_case = "0.8.0"
csv = "1.3.1"
derive-getters = "0.5.0"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
derive_setters = "0.1.6"
indicatif = { version = "0.17.11", features = ["rayon"] }
nom = "8.0.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }

[dev-dependencies]
criterion = "0.5.1"
plotters = "0.3.7"
test-log = { version = "0.2.17", features = ["trace"] }

[[bench]]
name = "compare_records"
harness = false

[profile.bench]
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
